--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  @apply text-5xl font-bold;
+}
+
+h2 {
+  @apply text-gray-800 text-3xl font-bold mb-4;
+}
+
+p {
+  @apply text-gray-800 mt-2 text-xl leading-relaxed;
+}
+
+section {
+  @apply py-20;
+}
+
+label {
+  @apply block text-gray-700;
+}
+
+input {
+  @apply w-full mt-2 p-2 border rounded-md;
+}
+
+button {
+  @apply bg-blue-500 text-white py-2 px-4 rounded-md;
+}
+
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  .dark {
+    --tw-bg-opacity: 1;
+    background-color: rgba(26, 32, 44, var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: rgba(203, 213, 224, var(--tw-text-opacity));
+  }
+}
+
